@@ -26,6 +26,7 @@ version 0.7.4 - Currently available as svn snapshot
   - NEW: experimental large pedigree sampling largePedigreeSample
   - NEW: experimental support for merlin/vc and merlin regression
   - CHG (internal): overhaul of ascertainment operators and file save stuff.
+  - NEW: add 'useDefault' option to simuOpt paramter specification.
 
 
 version 0.7.3 - (Rev 470) Oct 2, 2006
